# day24

./: pyproject.toml
.claude/: settings.json
story_writer_agent/: agent.py  callbacks.py  prompt.py
story_writer_agent/sub_agents/illustrator_agent/: agent.py  prompt.py  tools.py
story_writer_agent/sub_agents/page_composer_agent/: agent.py  prompt.py  tools.py
story_writer_agent/sub_agents/storybook_reveal_agent/: agent.py
story_writer_agent/sub_agents/writer_agent/: agent.py  prompt.py  schemas.py
